# save-as-xlsx

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml  type-check.yml
src/save_as_xlsx/: __about__.py  __init__.py
tests/: __init__.py  test_pydantic.py  test_pyopenxl_verifier.py  test_save_as_xlsx.py
