[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "save-as-xlsx"
dynamic = ["version"]
description = 'Save a list as an Excel file easily.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Vaclav Dvorak", email = "vashek@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "xlsxwriter",
  "annotated_types",
]

[project.urls]
Documentation = "https://github.com/vashek/save-as-xlsx#readme"
Issues = "https://github.com/vashek/save-as-xlsx/issues"
Source = "https://github.com/vashek/save-as-xlsx"

[tool.hatch.version]
path = "src/save_as_xlsx/__about__.py"

[tool.hatch.envs.default]
extra-dependencies = [
  "openpyxl",
  "pydantic",
  "pytest",
  "coverage",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive --no-error-summary --show-column-numbers --show-error-codes {args:src/save_as_xlsx tests}"

[tool.coverage.run]
source_pkgs = ["save_as_xlsx", "tests"]
branch = true
parallel = true
omit = [
  "src/save_as_xlsx/__about__.py",
]

[tool.coverage.paths]
save_as_xlsx = ["src/save_as_xlsx", "*/save-as-xlsx/src/save_as_xlsx"]
tests = ["tests", "*/save-as-xlsx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
pydantic = ["none", "v2", "v1", "latest"]
openpyxl = ["none", "latest"]

[tool.hatch.envs.hatch-test]
extra-args = ["-rfEP"]

[tool.hatch.envs.hatch-test.overrides]
matrix.pydantic.dependencies = [
    { value = "pydantic~=2.0", if = ["v2"] },
    { value = "pydantic>=2.0", if = ["latest"] },
    { value = "pydantic<2", if = ["v1"] },
    # nothing for "none"
]
matrix.openpyxl.dependencies = [
    { value = "openpyxl", if = ["latest"] },
    # nothing for "none"
]

[tool.ruff.lint]
ignore = ["EM102", "TRY003"]
